Fix spacing and blur

--- a/src/styles/containers/_name-generator-list-interface.scss
+++ b/src/styles/containers/_name-generator-list-interface.scss
@@ -47,7 +47,7 @@
     }
 
     &::before {
-      content: 'Drop items here to add them';
+      content: 'Drop cards here to add them to your network';
       pointer-events: none;
       position: absolute;
       top: 0;
